Fixed various widths and alignments

--- a/static/css/dreams.css
+++ b/static/css/dreams.css
@@ -66,7 +66,10 @@ footer {
     text-align: right;
 }
 
-p {
+p, li {
     max-width: 712px;
 }
 
+p.footer {
+    max-width: 100%;
+}
